ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
10/27/11 Daniel K. O.
        * Disabled merging of contacts for trimesh-sphere by default.
        * Added new demo: demo_tracks.

10/17/11 Daniel K. O.
        * Added python bindings, contributed by Gideon Klompje.
        * Updated some build scripts.
        * Changed spheres distribution in demo_space_stress.

05/17/11 Oleh Derevenko
        * A typo in step.cpp fixed (assignment operator in a conditional 
          instead of comparison) (reported by Bram Stolk)

01/29/11 Oleh Derevenko
        * Heightfield zone boundaries calculation code fixed to also consider
          whole next cell after the AABB if the AABB ends exactly at the cell
          boundary.

01/23/11 Daniel K. O.
        * Applied patch from Daniel Fiser, add libccd collider for
          box-cylinder.

01/20/11 Daniel K. O.
        * Applied patch from Daniel Fiser, fix infinite loop in libccd caused
          by numerical problems.

01/06/11 Daniel K. O.
        * Applied patch from Daniel Fiser, efficient libccd tests when using
          CONTACTS_UNIMPORTANT.

12/17/10 Daniel K. O.
        * Applied patches from Daniel Fiser for new colliders based on libccd.

11/08/10 Daniel K. O.
        * Applied patches from Daniel Fiser to incorporate libccd for
          Cylinder-Cylinder collision tests.

08/21/10 Oleh Derevenko
        * Fix applied to dxReallocateTemporayWorldProcessContext() to remove typo 
          which caused segmentation fault (by Kyle McKay).
          dTestSolveLCP() fixed to avoid exceeding allocated memory pool 
          (by Kyle McKay).

07/19/10 Oleh Derevenko